--- a/pages/publication.html
+++ b/pages/publication.html
@@ -17,9 +17,9 @@
           <ul class="nav-links">
               <li><a href="about.html">About</a></li>
               <li><a href="research.html">Research</a></li>
-              <li><a href="publication.html">Publications</a></li>
+              <li><a href="publication.html" class="active">Publications</a></li>
               <li><a href="teaching.html">Teaching</a></li>
-              <li><a href="cvitae.html" class="active">CV</a></li>
+              <li><a href="cvitae.html">CV</a></li>
               <li><a href="news.html">News</a></li>
           </ul>
       </div>
