--- a/pages/publication.html
+++ b/pages/publication.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gopal Bhatta</title>
-  <link rel="icon" type="image/x-icon" href="/assets/icons/favicon-agn.png">
-  <link rel="stylesheet" href="/main.css" />
+  <link rel="icon" type="image/x-icon" href="../assets/icons/favicon-agn.png">
+  <link rel="stylesheet" href="../main.css" />
   <link rel="stylesheet" href="page.css" />
 </head>
 <body>
   <nav class="desktop-nav">
     <div class="nav-name">
-      <a href="/index.html">Gopal Bhatta</a>
+      <a href="../index.html">Gopal Bhatta</a>
     </div>
       <div>
           <ul class="nav-links">
