--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
     </div>
   </main>
   <footer>
+    <div class="social-icons">
+      <a href="https://www.youtube.com" target="_blank"><img src="assets/icons/youtube.svg" alt="YouTube"></a>
+      <a href="https://www.facebook.com" target="_blank"><img src="assets/icons/facebook.svg" alt="Facebook"></a>
+      <a href="https://www.instagram.com" target="_blank"><img src="assets/icons/instagram.svg" alt="Instagram"></a>
+      <a href="https://www.twitter.com" target="_blank"><img src="assets/icons/twitterx.svg" alt="Twitter"></a>
+      <a href="https://github.com" target="_blank"><img src="assets/icons/github.svg" alt="Github"></a>
+      <a href="mailto:example@gmail.com" target="_blank"><img src="assets/icons/mail.svg" alt="Mail"></a>
+    </div>
     <p>&#169; 2024 Gopal Bhatta. All Rights Reserved.</p>
   </footer>
 </body>
