--- a/pages/about.html
+++ b/pages/about.html
@@ -17,14 +17,13 @@
           <ul class="nav-links">
               <li><a href="about.html" class="active">About</a></li>
               <li><a href="research.html">Research</a></li>
-              <li><a href="publication.html">Publications</a></li>
               <li><a href="teaching.html">Teaching</a></li>
               <li><a href="cvitae.html">CV</a></li>
               <li><a href="news.html">News</a></li>
           </ul>
       </div>
   </nav>
-  <main>
+  <main class="ongoing">
       <p>Under Construction 🏗️</p>
   </main>
   <footer>
