--- a/pages/research.html
+++ b/pages/research.html
@@ -17,15 +17,29 @@
           <ul class="nav-links">
               <li><a href="about.html">About</a></li>
               <li><a href="research.html" class="active">Research</a></li>
-              <li><a href="publication.html">Publications</a></li>
               <li><a href="teaching.html">Teaching</a></li>
               <li><a href="cvitae.html">CV</a></li>
               <li><a href="news.html">News</a></li>
           </ul>
       </div>
   </nav>
-  <main>
-      <p>Under Construction 🏗️</p>
+  <main class="research">
+    <div class="researchbox">
+      <h2>Research Interests</h2>
+      <ul>
+        <li>Data Science</li>
+        <li>Machine Learning</li>
+        <li>Artificial Intelligence</li>
+        <li>Computer Vision</li>
+      </ul>
+    </div>
+    <div class="researchbox">
+      <h2>Publications List</h2>
+      <p>Complete list of publications can be found on the following links:</p>
+    </div>
+    <div class="researchbox">
+      <h2>Research Highlights</h2>
+    </div>
   </main>
   <footer>
     <div class="social-icons">
