--- a/pages/research.html
+++ b/pages/research.html
@@ -1,56 +1,63 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gopal Bhatta</title>
-  <link rel="icon" type="image/x-icon" href="../assets/icons/favicon-agn.png">
-  <link rel="stylesheet" href="../main.css" />
-  <link rel="stylesheet" href="page.css" />
-</head>
-<body>
-  <nav class="desktop-nav">
-    <div class="nav-name">
-      <a href="../index.html">Gopal Bhatta</a>
-    </div>
-      <div>
-          <ul class="nav-links">
-              <li><a href="about.html">About</a></li>
-              <li><a href="research.html" class="active">Research</a></li>
-              <li><a href="teaching.html">Teaching</a></li>
-              <li><a href="cvitae.html">CV</a></li>
-              <li><a href="news.html">News</a></li>
-          </ul>
-      </div>
-  </nav>
-  <main class="research">
-    <div class="researchbox">
-      <h2>Research Interests</h2>
-      <ul>
-        <li>Data Science</li>
-        <li>Machine Learning</li>
-        <li>Artificial Intelligence</li>
-        <li>Computer Vision</li>
-      </ul>
-    </div>
-    <div class="researchbox">
-      <h2>Publications List</h2>
-      <p>Complete list of publications can be found on the following links:</p>
-    </div>
-    <div class="researchbox">
-      <h2>Research Highlights</h2>
-    </div>
-  </main>
-  <footer>
-    <div class="social-icons">
-      <a href="https://www.youtube.com" target="_blank"><img src="../assets/icons/youtube.svg" alt="YouTube"></a>
-      <a href="https://www.facebook.com" target="_blank"><img src="../assets/icons/facebook.svg" alt="Facebook"></a>
-      <a href="https://www.instagram.com" target="_blank"><img src="../assets/icons/instagram.svg" alt="Instagram"></a>
-      <a href="https://www.twitter.com" target="_blank"><img src="../assets/icons/twitterx.svg" alt="Twitter"></a>
-      <a href="https://github.com" target="_blank"><img src="../assets/icons/github.svg" alt="Github"></a>
-      <a href="mailto:example@gmail.com" target="_blank"><img src="../assets/icons/mail.svg" alt="Mail"></a>
-    </div>
-    <p>&#169; 2024 Gopal Bhatta. All Rights Reserved.</p>
-  </footer>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Gopal Bhatta</title>
+        <link
+            rel="icon"
+            type="image/x-icon"
+            href="../assets/icons/favicon-agn.png"
+        />
+        <link rel="stylesheet" href="../main.css" />
+        <link rel="stylesheet" href="page.css" />
+    </head>
+    <body>
+        <nav class="desktop-nav">
+            <div class="nav-name">
+                <a href="../index.html">Gopal Bhatta</a>
+            </div>
+            <div>
+                <ul class="nav-links">
+                    <li><a href="research.html" class="active">Research</a></li>
+                    <li><a href="papers.html">Publications</a></li>
+                    <li><a href="cvitae.html">CV</a></li>
+                    <li><a href="group.html">Group</a></li>
+                    <li><a href="teaching.html">Teaching</a></li>
+                    <li><a href="news.html">News</a></li>
+                </ul>
+            </div>
+        </nav>
+        <main class="research">
+            <div class="researchbox">
+                <h2>Research Interests</h2>
+                <ul>
+                    <li>High Energy Astrophysics</li>
+                    <li>Active Galactic Nuclei: Blazars</li>
+                    <li>Multi-band and multi-signal astronomy</li>
+                </ul>
+                My research focuses on understanding the complex behavior of blazars, which are among the most energetic and variable sources in the universe.
+                I use a combination of observational data and advanced computational techniques such as machine learning to more accurately classify gamma-ray blazars.
+                My recent work examines how machine learning models with novel weight initialization methods and self-supervised learning can improve our ability to identify these objects.
+                <br>
+                Additionally, I study the optical and gamma-ray variability of blazars, with a special focus on recording deep outbursts that provide important information about the jets emitted by these sources.
+                My research also includes the study of ultra-high-energy photons that may originate from blazar jets, linking their activity to the most energetic phenomena in astrophysics.
+                <br>
+                By analyzing long-term patterns of optical variability and the nature of gamma-ray variability, I aim to explain the physical processes that drive these extreme changes in blazar emission.
+            </div>
+            <div class="researchbox">
+                <h2>Research Highlights</h2>
+            </div>
+        </main>
+        <footer>
+            <div class="social-icons">
+                <a href="https://www.youtube.com" target="_blank"><img src="../assets/icons/youtube.svg" alt="YouTube"/></a>
+                <a href="https://www.facebook.com" target="_blank"><img src="../assets/icons/facebook.svg" alt="Facebook"/></a>
+                <a href="https://www.twitter.com" target="_blank"><img src="../assets/icons/twitterx.svg" alt="Twitter"/></a>
+                <a href="https://github.com" target="_blank"><img src="../assets/icons/github.svg" alt="Github"/></a>
+                <a href="mailto:example@gmail.com" target="_blank"><img src="../assets/icons/mail.svg" alt="Mail"/></a>
+            </div>
+            <p>&#169; 2024 Gopal Bhatta. All Rights Reserved.</p>
+        </footer>
+    </body>
 </html>
