--- a/index.html
+++ b/index.html
@@ -1,49 +1,58 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gopal Bhatta</title>
-  <link rel="icon" type="image/x-icon" href="assets/icons/favicon-agn.png">
-  <link rel="stylesheet" href="main.css" />
-</head>
-<body>
-  <nav class="desktop-nav">
-    <div class="nav-name">
-      <a href="index.html">Gopal Bhatta</a>
-    </div>
-      <div>
-          <ul class="nav-links">
-              <li><a href="pages/about.html">About</a></li>
-              <li><a href="pages/research.html">Research</a></li>
-              <li><a href="pages/publication.html">Publications</a></li>
-              <li><a href="pages/teaching.html">Teaching</a></li>
-              <li><a href="pages/cvitae.html">CV</a></li>
-              <li><a href="pages/news.html">News</a></li>
-          </ul>
-      </div>
-  </nav>
-  <main class="homebox">
-    <div class="propic">
-      <img src="assets/about-pic.png" alt="Profile Picture">
-    </div>
-    <div class="shortbio">
-      <h3>Hello,</h3>
-      <p>Lorem ipsum <strong>Gopal Bhatta</strong> dolor sit amet consectetur adipisicing elit. Hic quis reprehenderit et laborum, rem, dolore eum quod voluptate exercitationem nobis, 
-        nihil esse debitis maxime facere minus sint delectus velit in eos quo officiis explicabo deleniti dignissimos. Eligendi illum libero dolorum cum 
-        laboriosam corrupti quidem, reiciendis ea magnam? Nulla, impedit fuga!</p>
-    </div>
-  </main>
-  <footer>
-    <div class="social-icons">
-      <a href="https://www.youtube.com" target="_blank"><img src="assets/icons/youtube.svg" alt="YouTube"></a>
-      <a href="https://www.facebook.com" target="_blank"><img src="assets/icons/facebook.svg" alt="Facebook"></a>
-      <a href="https://www.instagram.com" target="_blank"><img src="assets/icons/instagram.svg" alt="Instagram"></a>
-      <a href="https://www.twitter.com" target="_blank"><img src="assets/icons/twitterx.svg" alt="Twitter"></a>
-      <a href="https://github.com" target="_blank"><img src="assets/icons/github.svg" alt="Github"></a>
-      <a href="mailto:example@gmail.com" target="_blank"><img src="assets/icons/mail.svg" alt="Mail"></a>
-    </div>
-    <p>&#169; 2024 Gopal Bhatta. All Rights Reserved.</p>
-  </footer>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Gopal Bhatta</title>
+        <link
+            rel="icon"
+            type="image/x-icon"
+            href="assets/icons/favicon-agn.png"
+        />
+        <link rel="stylesheet" href="main.css" />
+    </head>
+    <body>
+        <nav class="desktop-nav">
+            <div class="nav-name">
+                <a href="index.html">Gopal Bhatta</a>
+            </div>
+            <div>
+                <ul class="nav-links">
+                    <li><a href="pages/research.html">Research</a></li>
+                    <li><a href="pages/papers.html">Publications</a></li>
+                    <li><a href="pages/cvitae.html">CV</a></li>
+                    <li><a href="pages/group.html">Group</a></li>
+                    <li><a href="pages/teaching.html">Teaching</a></li>
+                    <li><a href="pages/news.html">News</a></li>
+                </ul>
+            </div>
+        </nav>
+        <main class="homebox">
+            <div class="propic">
+                <img src="assets/about-pic.png" alt="Profile Picture" />
+            </div>
+            <div class="shortbio">
+                <h3>Hello,</h3>
+                <p>
+                    Lorem ipsum <strong>Gopal Bhatta</strong> dolor sit amet
+                    consectetur adipisicing elit. Hic quis reprehenderit et
+                    laborum, rem, dolore eum quod voluptate exercitationem
+                    nobis, nihil esse debitis maxime facere minus sint delectus
+                    velit in eos quo officiis explicabo deleniti dignissimos.
+                    Eligendi illum libero dolorum cum laboriosam corrupti
+                    quidem, reiciendis ea magnam? Nulla, impedit fuga!
+                </p>
+            </div>
+        </main>
+        <footer>
+            <div class="social-icons">
+                <a href="https://www.youtube.com" target="_blank"><img src="assets/icons/youtube.svg" alt="YouTube"/></a>
+                <a href="https://www.facebook.com" target="_blank"><img src="assets/icons/facebook.svg" alt="Facebook"/></a>
+                <a href="https://www.twitter.com" target="_blank"><img src="assets/icons/twitterx.svg" alt="Twitter"/></a>
+                <a href="https://github.com" target="_blank"><img src="assets/icons/github.svg" alt="Github"/></a>
+                <a href="mailto:example@gmail.com" target="_blank"><img src="assets/icons/mail.svg" alt="Mail"/></a>
+            </div>
+            <p>&#169; 2024 Gopal Bhatta. All Rights Reserved.</p>
+        </footer>
+    </body>
 </html>
