--- a/pages/papers.html
+++ b/pages/papers.html
@@ -20,8 +20,8 @@
             <div>
                 <ul class="nav-links">
                     <li><a href="research.html">Research</a></li>
-                    <li><a href="papers.html">Publications</a></li>
-                    <li><a href="cvitae.html" class="active">CV</a></li>
+                    <li><a href="papers.html" class="active">Publications</a></li>
+                    <li><a href="cvitae.html">CV</a></li>
                     <li><a href="group.html">Group</a></li>
                     <li><a href="teaching.html">Teaching</a></li>
                     <li><a href="news.html">News</a></li>
