--- a/pages/research.html
+++ b/pages/research.html
@@ -28,7 +28,7 @@
                 </ul>
             </div>
         </nav>
-        <main class="research">
+        <main class="mainbox">
             <div class="researchbox">
                 <h2>Research Interests</h2>
                 <ul>
@@ -47,6 +47,53 @@
             </div>
             <div class="researchbox">
                 <h2>Research Highlights</h2>
+                <div class="rhlightbox">
+                    <h3>Predicting Redshifts of Active Galactic Nuclei Using Machine Learning</h3>
+                    In our recent research, we tackled the challenge of predicting redshift values for Active Galactic Nuclei (AGN), a critical aspect of understanding the universe's structure. 
+                    Our study, titled "Predicting Conditional Probability Distributions of Redshifts of Active Galactic Nuclei Using Hierarchical Correlation Reconstruction," highlights the limitations of traditional methods, which are often expensive and complex. 
+                    Instead, we turned to machine learning techniques to enhance the accuracy and efficiency of redshift predictions. <br>
+                    We employed a Hierarchical Correlation Reconstruction approach that allows us to predict complex conditional probability distributions rather than just specific values. 
+                    This method is particularly advantageous given that real-world data often presents uncertainties that traditional techniques struggle to accommodate. 
+                    By utilizing independent Mean Squared Error estimation and linear regression, we developed interpretable models where coefficients elucidate the contributions of different features to conditional moments. <br>
+                    Our findings demonstrate significant advancements in predicting AGN redshifts using data from the Fourth Fermi-LAT Data Release 3 (4LAC-DR3). 
+                    By incorporating Canonical Correlation Analysis for feature optimization and l1 'lasso' regularization, we have created a robust framework that not only streamlines the prediction process but also enhances our understanding of AGN emissions. 
+                    This research represents a significant step forward in astrophysical data analysis, paving the way for more accurate models in the future.
+                </div>
+                <div class="rhlightbox">
+                    <h3>Long-Term X-Ray Variability Analysis of Blazar 3C 273</h3>
+                    Our collaborative work, "Constraining X-Ray Variability of the Blazar 3C 273 Using XMM-Newton Observations over Two Decades," provides a comprehensive analysis of one of the most studied blazars in astrophysics. 
+                    We utilized extensive X-ray observations collected over two decades to explore both long-term and short-term variability properties. <br>
+                    Through sophisticated timing and spectral analysis techniques, we uncovered that 3C 273 exhibits remarkable flux variability, changing by a factor of three during our observation period. 
+                    The fractional variability was estimated at 27%, indicating significant fluctuations in brightness. 
+                    Our analysis employed various statistical methods, including estimation of fractional variability and power spectral density analysis, allowing us to quantify these fluctuations accurately. <br>
+                    The results revealed a multimodal flux distribution across all observations, suggesting complex underlying processes at play within this blazar. 
+                    Our spectral analysis indicated that a log-parabola model combined with blackbody emission provided the best fit for most observations. 
+                    This work enhances our understanding of blazar behavior and contributes valuable insights into high-energy astrophysics, highlighting the intricate interactions between accretion disks and relativistic jets.
+                </div>
+                <div class="rhlightbox">
+                    <h3>Classifying Gamma-Ray Blazars with Machine Learning Techniques</h3>
+                    In our paper titled "Gamma-ray Blazar Classification Using Machine Learning with Advanced Weight Initialization and Self-Supervised Learning Techniques," we explored innovative machine learning applications in gamma-ray astrophysics. 
+                    Our research addresses the pressing need for effective classification methods among gamma-ray-emitting sources detected by the Fermi gamma-ray telescope. <br>
+                    We implemented multiple machine learning algorithms to classify sources based on their physical properties, focusing on distinguishing between blazars—specifically BL Lacertae objects and flat-spectrum radio quasars. 
+                    By employing advanced weight initialization techniques and self-supervised learning approaches, we achieved significant improvements in classification accuracy while simplifying model deployment. <br>
+                    Our findings indicate that out of 1115 sources classified as uncertain types in the 4FGL-DR3 catalogue, approximately 820 can be categorized as BL Lacs and 295 as FSRQs. 
+                    The efficiency of our model—achieving at least seven times faster inference compared to existing algorithms—demonstrates its potential for widespread application in astrophysical research. 
+                    This work not only advances classification methodologies but also enhances our understanding of blazar populations in the universe.
+                </div>
+                <div class="rhlightbox">
+                    <h3>Exploring Optical Variability in Blazars Using TESS Data</h3>
+                    In our recent study titled "Exploring Short-Term Optical Variability of Blazars Using TESS," we conducted a systematic time series analysis involving multiple blazar sources observed by NASA's Transiting Exoplanet Survey Satellite (TESS). 
+                    This research represents a significant advancement in understanding optical variability among blazars. <br>
+                    We identified significant optical variability among a sample of 29 blazars, revealing fractional variability ranging from 1.41% to 53.84%. 
+                    By applying various statistical models to analyze light curves, we found that optical flux distributions often align with normal probability density functions, indicating complex emission mechanisms at play. <br>
+                    A notable aspect of our research is its implications for understanding short-term activity states within blazars. 
+                    The results suggest that optical variability may arise from multiple emission zones or distinct states of activity within these energetic objects. 
+                    By employing power spectral density analysis, we further elucidated the nature of these variations, enhancing our comprehension of blazar dynamics and their underlying physical processes.
+
+                </div>
+                <!-- <div class="rhlightbox">
+                    <h3></h3>
+                </div> -->
             </div>
         </main>
         <footer>
