--- a/pages/papers.html
+++ b/pages/papers.html
@@ -28,8 +28,97 @@
                 </ul>
             </div>
         </nav>
-        <main class="ongoing">
-            <p>Under Construction 🏗️</p>
+        <main class="mainbox">
+            <div class="paperbox1">
+                <h2>Research Profile</h2>
+                <div class="pbtnbox">
+                    <a href="https://ui.adsabs.harvard.edu/search/q=author%3A%22Bhatta%2C%20Gopal%22&sort=date%20desc%2C%20bibcode%20desc&p_=0" target="_blank"><button class="pbtn">NASA ADS</button></a>
+                    <a href="https://orcid.org/0000-0002-0705-6619" target="_blank"><button class="pbtn">ORCID</button></a>
+                    <a href="https://scholar.google.com/citations?user=GeOQCIQAAAAJ&hl=en" target="_blank"><button class="pbtn">Google Scholar</button></a>
+                    <a href="http://www.researcherid.com/rid/O-8126-2017" target="_blank"><button class="pbtn">Web of Science</button></a>
+                </div>
+            </div>
+            <div class="paperbox2">
+                <h2>Selected Journals</h2>
+                <li>
+                    Duda, J., & <b>Bhatta, G.</b> (2024). Predicting conditional probability distributions of redshifts of Active Galactic Nuclei using Hierarchical Correlation Reconstruction. 
+                    Monthly Notices of the Royal Astronomical Society, 530(2), 2282-2291. <br>
+                    <a href="https://doi.org/10.1093/mnras/stae963" target="_blank"><button class="pbtn2">DOI</button></a>
+                    <a href="https://ui.adsabs.harvard.edu/abs/2024MNRAS.530.2282D/abstract" target="_blank"><button class="pbtn2">ADS</button></a>
+                </li>
+                <li>
+                    <b>Bhatta, G.</b>, Gharat, S., Borthakur, A., & Kumar, A. (2024). Gamma-ray blazar classification using machine learning with advanced weight initialization and self-supervised learning techniques. 
+                    Monthly Notices of the Royal Astronomical Society, 528(1), 976-986. <br>
+                    <a href="https://doi.org/10.1093/mnras/stae028" target="_blank"><button class="pbtn2">DOI</button></a>
+                    <a href="https://ui.adsabs.harvard.edu/abs/2024MNRAS.528..976B/abstract" target="_blank"><button class="pbtn2">ADS</button></a>
+                </li>
+                <li>
+                    Dinesh, A., <b>Bhatta, G.</b>, Adhikari, T. P., Mohorian, M., Dhital, N., Chaudhary, S. C., Pánis, R., & Góra, D. (2023). Constraining X-ray variability of the blazar 3C 273 using XMM-Newton observations over two decades. 
+                    The Astrophysical Journal, 955(2), 121. <br>
+                    <a href="https://doi.org/10.3847/1538-4357/acf316" target="_blank"><button class="pbtn2">DOI</button></a>
+                    <a href="https://ui.adsabs.harvard.edu/abs/2023ApJ...955..121D/abstract" target="_blank"><button class="pbtn2">ADS</button></a>
+                </li>
+                <li>
+                    Gharat, S., Borthakur, A., & <b>Bhatta, G.</b> (2023). Estimation of redshift and associated uncertainty of Fermi/Lat extragalactic sources with Deep Learning. 
+                    Monthly Notices of the Royal Astronomical Society, 527(3), 6198-6210. <br>
+                    <a href="https://doi.org/10.1093/mnras/stad3622" target="_blank"><button class="pbtn2">DOI</button></a>
+                    <a href="https://ui.adsabs.harvard.edu/abs/2024MNRAS.527.6198G/abstract" target="_blank"><button class="pbtn2">ADS</button></a>
+                </li>
+                <li>
+                    <b>Bhatta, G.</b>, Zola, S., Drozdz, M., Reichart, D., Haislip, J., Kouprianov, V., Matsumoto, K., Sonbas, E., Caton, D., Simon, A., Provencal, J., Góra, D., & Stachowski, G. (2023). 
+                    Catching profound optical flares in blazars. Monthly Notices of the Royal Astronomical Society, 520(2), 2633-2643. <br>
+                    <a href="https://doi.org/10.1093/mnras/stad280" target="_blank"><button class="pbtn2">DOI</button></a>
+                    <a href="https://ui.adsabs.harvard.edu/abs/2023arXiv230807861B/abstract" target="_blank"><button class="pbtn2">ADS</button></a>
+                </li>
+                <li>
+                    Pininti, V. R., <b>Bhatta, G.</b>, Paul, S., Kumar, A., Rajgor, A., Barnwal, R., & Gharat, S. (2022). Exploring short-term optical variability of blazars using TESS. 
+                    Monthly Notices of the Royal Astronomical Society, 518(1), 1459-1471. <br>
+                    <a href="https://doi.org/10.1093/mnras/stac3125" target="_blank"><button class="pbtn2">DOI</button></a>
+                    <a href="https://ui.adsabs.harvard.edu/abs/2023MNRAS.518.1459P/abstract" target="_blank"><button class="pbtn2">ADS</button></a>
+                </li>
+                <li>
+                    <b>Bhatta, G.</b> (2022). Blazar Jets as Possible Sources of Ultra-High Energy Photons: A Short Review. Universe, 8(10), 513. <br>
+                    <a href="https://doi.org/10.3390/universe8100513" target="_blank"><button class="pbtn2">DOI</button></a>
+                    <a href="https://ui.adsabs.harvard.edu/abs/2022Univ....8..513B/abstract" target="_blank"><button class="pbtn2">ADS</button></a>
+                </li>
+                <li>
+                    Markowitz, A. G., Nalewajko, K., <b>Bhatta, G.</b>, Dewangan, G. C., Chandra, S., Dorner, D., Schleicher, B., Stawarz, Ł., Zola, S., Ostrowski, M., Carosati, D., Krishnan, S., Bachev, R., Benítez, E., Gazeas, K., Hiriart, D., Hu, S., Larionov, V., Marchini, A., . . .  Walter, R. (2022). 
+                    Rapid X-ray variability in Mkn 421 during a multiwavelength campaign. Monthly Notices of the Royal Astronomical Society, 513(2), 1662-1679. <br>
+                    <a href="https://doi.org/10.1093/mnras/stac917" target="_blank"><button class="pbtn2">DOI</button></a>
+                    <a href="https://ui.adsabs.harvard.edu/abs/2022MNRAS.513.1662M/abstract" target="_blank"><button class="pbtn2">ADS</button></a>
+                </li>
+                <li>
+                    <b>Bhatta, G.</b> (2021). Characterizing long-term optical variability properties of γ-ray-bright blazars. The Astrophysical Journal, 923(1), Article 7. <br>
+                    <a href="https://doi.org/10.3847/1538-4357/ac2819" target="_blank"><button class="pbtn2">DOI</button></a>
+                    <a href="https://ui.adsabs.harvard.edu/abs/2021ApJ...923....7B/abstract" target="_blank"><button class="pbtn2">ADS</button></a>
+                </li>
+                <li>
+                    Duda, J., & <b>Bhatta, G.</b> (2021). Gamma-ray blazar variability: New statistical methods of time-flux distributions. 
+                    Monthly Notices of the Royal Astronomical Society, 508(1), 1446-1458. <br>
+                    <a href="https://doi.org/10.1093/mnras/stab2574" target="_blank"><button class="pbtn2">DOI</button></a>
+                    <a href="https://ui.adsabs.harvard.edu/abs/2021MNRAS.508.1446D/abstract" target="_blank"><button class="pbtn2">ADS</button></a>
+                </li>
+                <li>
+                    <b>Bhatta, G.</b>, Pánis, R., & Stuchlík, Z. (2020). Deterministic aspect of the γ-ray variability in blazars. The Astrophysical Journal, 905(2), Article 160. <br>
+                    <a href="https://doi.org/10.3847/1538-4357/abc625" target="_blank"><button class="pbtn2">DOI</button></a>
+                    <a href="https://ui.adsabs.harvard.edu/abs/2020ApJ...905..160B/abstract" target="_blank"><button class="pbtn2">ADS</button></a>
+                </li>
+                <li>
+                    <b>Bhatta, G.</b>, & Dhital, N. (2020). The nature of γ-ray variability in blazars. The Astrophysical Journal, 891(2), Article 120. <br>
+                    <a href="https://doi.org/10.3847/1538-4357/ab7455" target="_blank"><button class="pbtn2">DOI</button></a>
+                    <a href="https://ui.adsabs.harvard.edu/abs/2020ApJ...891..120B/abstract" target="_blank"><button class="pbtn2">ADS</button></a>
+                </li>
+                <li>
+                    <b>Bhatta, G.</b> (2019). Study of Periodic Signals from Blazars. Proceedings, 17(1), 15.  <br>
+                    <a href="https://doi.org/10.3390/proceedings2019017015" target="_blank"><button class="pbtn2">DOI</button></a>
+                    <a href="https://ui.adsabs.harvard.edu/abs/2019rpra.conf...15B/abstract" target="_blank"><button class="pbtn2">ADS</button></a>
+                </li>
+                <!-- <li>
+                    
+                    <a href="" target="_blank"><button class="pbtn2">DOI</button></a>
+                    <a href="" target="_blank"><button class="pbtn2">ADS</button></a>
+                </li> -->
+            </div>
         </main>
         <footer>
             <div class="social-icons">
