--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </nav>
         <main class="homebox">
             <div class="propic">
-                <img src="assets/about-pic.png" alt="Profile Picture" />
+                <img src="assets/web_pic.jpg" alt="Profile Picture" />
             </div>
             <div class="shortbio">
                 <h3>Hello,</h3>
